@@ -79,6 +79,7 @@ return array(
 	'tx_solr_pi_search' => $extensionPath . 'pi_search/class.tx_solr_pi_search.php',
 
 	'tx_solr_pi_results_advancedformcommand' => $extensionPath . 'pi_results/class.tx_solr_pi_results_advancedformcommand.php',
+	'tx_solr_pi_results_errorscommand' => $extensionPath . 'pi_results/class.tx_solr_pi_results_errorscommand.php',
 	'tx_solr_pi_results_facetingcommand' => $extensionPath . 'pi_results/class.tx_solr_pi_results_facetingcommand.php',
 	'tx_solr_pi_results_formcommand' => $extensionPath . 'pi_results/class.tx_solr_pi_results_formcommand.php',
 	'tx_solr_pi_results_noresultscommand' => $extensionPath . 'pi_results/class.tx_solr_pi_results_noresultscommand.php',
