@@ -30,6 +30,25 @@
 
 
 
+	<!-- ###SOLR_SEARCH_ERRORS### begin -->
+
+	<div class="tx-solr-search-form-errors">
+		###LLL:error_errors###
+		<!-- ###LOOP:ERRORS### begin -->
+		<ul class="tx-solr-search-form-error-list">
+		<!-- ###LOOP_CONTENT### -->
+			<li>
+			###ERROR.MESSAGE###
+			</li>
+		<!-- ###LOOP_CONTENT### -->
+		</ul>
+		<!-- ###LOOP:ERRORS### end -->
+	</div>
+
+	<!-- ###SOLR_SEARCH_ERRORS### end -->
+
+
+
 	<!-- ###SOLR_SEARCH_RESULTS### begin -->
 
 	###RESULTS.SEARCHED_FOR###
